--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,94 +2,121 @@
 <html>
 
 <head>
-    <!--info for browser -->
+	<!--info for browser -->
 	<meta charset="UTF-8">
-    <meta name="keywords" content="HTML, CSS, JavaScript, portfolio">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/dp.jpeg"/>
-    <!-- title -->
+	<meta name="keywords" content="HTML, CSS, JavaScript, portfolio">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- favicon -->
+	<link rel="shortcut icon" type="image/x-icon" href="images/dp.jpeg" />
+	<!-- title -->
 	<title>My Portfolio</title>
 
-    <!-- add css -->
+	<!-- add css -->
 	<link rel="stylesheet" href="style.css">
-    <!-- add javascript -->
+	<!-- add javascript -->
 	<script src="script.js"></script>
-    <!-- add fontawesome icons -->
+	<!-- add fontawesome icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
-    <!-- header -->
-    <header id="body-header">
-        <!-- navigate to different sections of page -->
-        <nav>
+	<!-- header -->
+	<header id="body-header">
+		<!-- navigate to different sections of page -->
+		<nav>
 
-            <ul class="horizontal-list text-center nav-menu">
-                <li>
-                    <a href="#"> Home </a>
-                </li>
-                <li>
-                    <a href="#about"> About </a>
-                </li>
-                <li>
-                    <a href="#skills"> Skills </a>
-                </li>
-                <li>
-                    <a href="#experience">Experience</a>
-                </li>
-                <li>
-                    <a href="#education">Education</a>
-                </li>
-            </ul>
-            <ul class="horizontal-list text-center">
-                    <li>
-                            <a href="#contact">Contact</a>
-                    </li>
-            </ul>
+			<ul class="horizontal-list text-center nav-menu">
+				<li>
+					<a href="#"> Home </a>
+				</li>
+				<li>
+					<a href="#about"> About </a>
+				</li>
+				<li>
+					<a href="#skills"> Skills </a>
+				</li>
+				<li>
+					<a href="#experience">Experience</a>
+				</li>
+				<li>
+					<a href="#education">Education</a>
+				</li>
+			</ul>
+			<ul class="horizontal-list text-center">
+				<li>
+					<a href="#contact">Contact</a>
+				</li>
+			</ul>
 
-        </nav>
-        <!-- navigate to different sections of page -->
+		</nav>
+		<!-- navigate to different sections of page -->
 
-        <!-- links to socialmedia accounts -->
-        <div id="name-social-container">
-            <!-- name -->
-            <div class="text-center">
-                <h1 id="my-name">KIRTI DABAS</h1>
+		<!-- links to socialmedia accounts -->
+		<div id="name-social-container">
+			<!-- name -->
+			<div class="text-center">
+				<h1 id="my-name">KIRTI DABAS</h1>
+			</div>
+
+			<!-- social media platforms -->
+			<div>
+				<ul class="horizontal-list text-center social-icons">
+					<li>
+						<a href="#">
+							<i class="fab fa-linkedin-in"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fab fa-stack-overflow"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fab fa-facebook-f"></i>
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<i class="fab fa-quora"></i>
+						</a>
+					</li>
+				</ul>
+
+			</div>
+			<!-- social media platforms -->
+		</div>
+		<!-- links to socialmedia accounts -->
+	</header>
+	<!-- header -->
+
+	<!-- main -->
+	<main>
+		<!-- about section -->
+		<section id="about">
+			<!-- profile image -->
+			<div id="my-image">
+				<img src="images/dp.jpeg">
             </div>
+				<!-- profile image -->
 
-            <!-- social media platforms -->
-            <div>
-                <ul class="horizontal-list text-center social-icons">
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-stack-overflow"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-quora"></i>
-                        </a>
-                    </li>
-                </ul>
+				<!-- description -->
+				<div id="about-para">
 
-            </div>
-            <!-- social media platforms -->
-        </div>
-        <!-- links to socialmedia accounts -->
-    </header>
-    <!-- header -->
+					<p>
+						my name is <span class="text-highlight">Kirti</span>. i am pursuing my bachelor of technology in
+						computers from <span class="text-highlight"> Delhi Technological University</span>.Currently i
+						am in 2nd year and have developed interest in web-development and hence is trying to explore the
+						domain.
+					</p>
+
+				</div>
+				<!-- description -->
+		</section>
+		<!-- about section -->
+	</main>
+	<!-- main -->
 </body>
 
 </html>
