add interests section

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,14 +34,16 @@
 					<a href="#about"> About </a>
 				</li>
 				<li>
-					<a href="#skills"> Skills </a>
+					<a href="#interests">Interests</a>
+				</li>
+				<li>
+					<a href="#project"> Projects </a>
 				</li>
 				<li>
 					<a href="#experience">Experience</a>
 				</li>
-				<li>
-					<a href="#education">Education</a>
-				</li>
+
+
 			</ul>
 			<ul class="horizontal-list text-center">
 				<li>
@@ -91,6 +93,7 @@
 	</header>
 	<!-- header -->
 
+
 	<!-- main -->
 	<main>
 		<!-- about section -->
@@ -106,15 +109,45 @@
 
 					<p>
 						my name is <span class="text-highlight">Kirti</span>. i am pursuing my bachelor of technology in
-						computers from <span class="text-highlight"> Delhi Technological University</span>.Currently i
-						am in 2nd year and have developed interest in web-development and hence is trying to explore the
-						domain.
+						computer Science from
+						<span class="text-highlight"> Delhi Technological University</span>.Currently i
+						am in my 2nd year and have got a marvelous opportunity to work as a
+						<span class="text-highlight">STEP</span> intern with <span class="text-highlight">google</span>.
 					</p>
 
 				</div>
 				<!-- description -->
 		</section>
 		<!-- about section -->
+
+        <!-- interests -->
+		<section id="interests">
+            <div class="text-highlight section-heading text-center mb50px ">
+                <span>
+                    <i class="fas fa-chalkboard-teacher"></i>
+                </span>
+                <span> 
+                    Interests
+                </span>
+            </div>
+			<div id="slide-container" class="shadow">
+				<img src="images\img1.jpg" id="img1">
+				<img src="images\img2.jpg" id="img2">
+				<img src="images\img3.jpg" id="img3">
+				<div id="slides" class="text-center">
+					<a><img src="images\img.jpg" ></a>
+				</div>
+			</div>
+            <div>
+					<ul id="nevigator" class="horizontal-list text-center">
+						<li><a href="#img1">.</a></li>
+						<li><a href="#img2">.</a></li>
+						<li><a href="#img3">.</a></li>
+					</ul>
+				</div>
+		</section>
+         <!-- interests -->
+
 	</main>
 	<!-- main -->
 </body>
