add project section

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -120,16 +120,21 @@
 		</section>
 		<!-- about section -->
 
-        <!-- interests -->
+		<!-- interests -->
 		<section id="interests">
-            <div class="text-highlight section-heading text-center mb50px ">
-                <span>
+			<!--interests heading -->
+			<h1 class="text-highlight section-heading text-center mb50px ">
+				<span>
                     <i class="fas fa-chalkboard-teacher"></i>
                 </span>
-                <span> 
+				<span>
                     Interests
                 </span>
-            </div>
+			</h1>
+			<!--interests heading -->
+
+			<!--image slider  -->
+
 			<div id="slide-container" class="shadow">
 				<img src="images\img1.jpg" id="img1">
 				<img src="images\img2.jpg" id="img2">
@@ -138,16 +143,73 @@
 					<a><img src="images\img.jpg" ></a>
 				</div>
 			</div>
-            <div>
-					<ul id="nevigator" class="horizontal-list text-center">
-						<li><a href="#img1">.</a></li>
-						<li><a href="#img2">.</a></li>
-						<li><a href="#img3">.</a></li>
-					</ul>
-				</div>
+			<!-- nevigate to other image -->
+			<div>
+				<ul id="nevigator" class="horizontal-list text-center">
+					<li><a href="#img1">.</a></li>
+					<li><a href="#img2">.</a></li>
+					<li><a href="#img3">.</a></li>
+				</ul>
+			</div>
+			<!-- nevigate to other image -->
+			<!-- image slider -->
 		</section>
-         <!-- interests -->
+		<!-- interests -->
 
+		<!-- projects -->
+		<section id="project">
+			<!-- heading -->
+			<h1 class="text-highlight section-heading mb75px">
+				<span>
+                    <i class="fas fa-briefcase"></i>
+                </span>
+				<span>Projects </span>
+			</h1>
+			<!-- heading -->
+
+			<!-- projects -->
+			<div class="content">
+				<!-- project-1 -->
+				<div class="content-box ">
+					<div class="content-container">
+						<h3 class="project-title  m0 m-blue">BuyFresh </h3>
+						<h4 class="project-brief"> E-Commerce portal for Farmers </h4>
+
+						<p class="project-description text-align-justify">
+							aimed at bridging the gap between farmers and buyers by providing a medium for direct
+							interaction and negociation
+							<br>
+                                suggest best price for crops depending on previous trends and current market price.
+						</p>
+					</div>
+				</div>
+				<!-- project-1 -->
+
+				<!-- project-2 -->
+				<div class="content-box right ">
+					<div class="content-container">
+						<h3 class="project-title m0 m-blue">Jobeneur</h3>
+						<h4 class="project-brief">Social Networking site for job seeking professionals</h4>
+						<p class="project-description text-align-justify">
+							added authentication and mailing functionalities
+						</p>
+					</div>
+				</div>
+				<!-- project-2 -->
+				<!-- aeroplane animation -->
+				<div id="timeline-divider">
+					<div class="timeline-traveller">
+						<div>
+							<i class="fas fa-plane"></i>
+						</div>
+					</div>
+				</div>
+				<!-- aeroplane animation -->
+			</div>
+
+			<!-- projects -->
+		</section>
+		<!-- projects -->
 	</main>
 	<!-- main -->
 </body>
