--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,8 +13,7 @@
 
 	<!-- add css -->
 	<link rel="stylesheet" href="style.css">
-	<!-- add javascript -->
-	<script src="script.js"></script>
+
 	<!-- add fontawesome icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -210,8 +209,42 @@
 			<!-- projects -->
 		</section>
 		<!-- projects -->
+		<section>
+			<!-- heading -->
+			<h1 class="text-highlight section-heading mb75px">
+				<span>
+                    <i class="fas fa-user-tie"></i>
+                </span>
+				<span>Experience </span>
+			</h1>
+			<!-- heading -->
+			<!-- cube -->
+			<div class="scene">
+				<div id="cube" class="cube">
+					<div class="face front">
+						<img src="images/gSuite.jpg" alt="GSuite" width="600px" height="600px"></img></div>
+					<div class="face back">
+						<img src="images/google.jpg" alt="google" width="600px" height="600px"></img></div>
+					<div class="face cube_right">
+						<img src="images/google_logo.jpg" alt="google_logo" width="600px" height="600px"></img>
+					</div>
+					<div class="face left">
+						<img src="images/Chrome.jpg" alt="Chrome" width="600px" height="600px"></img></div>
+					<div class="face top">
+						<img src="images/google.gif" alt="google" width="600px" height="600px"></img></div>
+					<div class="face bottom">
+						<img src="images/1stDay.png" alt="day-1-image" width="600px" height="600px"></img></div>
+				</div>
+			</div>
+			<!-- cube -->
+			<!-- button to change the view -->
+			<button id="next" class="m-blue ">click</button>
+			<!-- button to change the view -->
+
 	</main>
 	<!-- main -->
+	<!-- add javascript -->
+	<script src="script.js"></script>
 </body>
 
 </html>
