add js for scroll

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -44,11 +44,6 @@
 
 
 			</ul>
-			<ul class="horizontal-list text-center">
-				<li>
-					<a href="#contact">Contact</a>
-				</li>
-			</ul>
 
 		</nav>
 		<!-- navigate to different sections of page -->
@@ -64,23 +59,18 @@
 			<div>
 				<ul class="horizontal-list text-center social-icons">
 					<li>
-						<a href="#">
+						<a href="https://www.linkedin.com/in/kirti-dabas-a11159179/">
 							<i class="fab fa-linkedin-in"></i>
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<i class="fab fa-stack-overflow"></i>
-						</a>
-					</li>
-					<li>
-						<a href="#">
+						<a href="https://m.facebook.com/kirti.dabas.5454?ref=bookmarks">
 							<i class="fab fa-facebook-f"></i>
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<i class="fab fa-quora"></i>
+						<a href="https://www.codechef.com/users/kirti2000">
+							<img src="images/cc.jpeg" height="20px" width="20px"></img>
 						</a>
 					</li>
 				</ul>
@@ -209,7 +199,7 @@
 			<!-- projects -->
 		</section>
 		<!-- projects -->
-		<section>
+		<section id="experience">
 			<!-- heading -->
 			<h1 class="text-highlight section-heading mb75px">
 				<span>
