beautify click button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -36,7 +36,7 @@
 					<a href="#interests">Interests</a>
 				</li>
 				<li>
-					<a href="#project"> Projects </a>
+					<a href="#projects"> Projects </a>
 				</li>
 				<li>
 					<a href="#experience">Experience</a>
@@ -146,7 +146,7 @@
 		<!-- interests -->
 
 		<!-- projects -->
-		<section id="project">
+		<section id="projects">
 			<!-- heading -->
 			<h1 class="text-highlight section-heading mb75px">
 				<span>
