learn fetch function

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,7 +13,6 @@
 
 	<!-- add css -->
 	<link rel="stylesheet" href="style.css">
-
 	<!-- add fontawesome icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -228,13 +227,22 @@
 			</div>
 			<!-- cube -->
 			<!-- button to change the view -->
-			<button id="next" class="m-blue ">click</button>
+			<button class="next" class="m-blue ">click</button>
 			<!-- button to change the view -->
+		</section>
+		<!-- learning fetch -->
+		<section>
 
+			<button class="next" onclick='fetchMessage()'>fetch</button>
+			<div id="msg"></div>
+
+		</section>
+		<!-- learning fetch -->
 	</main>
 	<!-- main -->
 	<!-- add javascript -->
 	<script src="script.js"></script>
+	<script src="fetchMessage.js"></script>
 </body>
 
 </html>
