fix next button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -227,7 +227,7 @@
 			</div>
 			<!-- cube -->
 			<!-- button to change the view -->
-			<button class="next" class="m-blue ">click</button>
+			<button id="next" class="next" class="m-blue ">click</button>
 			<!-- button to change the view -->
 		</section>
 		<!-- learning fetch -->
