add and retrieve  comment to and from datastore

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -237,7 +237,7 @@
                 <button class="next" type="submit" >add</button>
             </form>
 			
-			<div id="msg"></div>
+			<ul id="msg"></ul>
 
 		</section>
 		<!-- learning fetch -->
