add delete comment functionality

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -231,7 +231,7 @@
 			<!-- button to change the view -->
 		</section>
 		<!-- learning fetch -->
-		<section>
+		<section class="mb50pxtop">
             <form>
                 <input id="commentNo" value="5" type="number" min="0" max="100000"></input>
             </form>
