--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -230,11 +230,29 @@
 			<button id="next" class="next" class="m-blue ">click</button>
 			<!-- button to change the view -->
 		</section>
+		<!-- add chart to show data  -->
+		<section id="chart">
+			<p>which section did you like the most</p>
+			<form action="/chart" method="POST">
+				<select name="section">
+                    <option value="about">About</option>
+                    <option value="interests">Interests</option>
+                    <option value="experience">Experience</option>
+                    <option value="projects">Projects</option>
+                </select>
+				<button>Submit</button>
+			</form>
+			<div id="chart-container">
 
+			</div>
+		</section>
+		<!-- add chart to show data -->
 	</main>
 	<!-- main -->
 	<!-- add javascript -->
 	<script src="script.js"></script>
+	<script src="https://www.gstatic.com/charts/loader.js"></script>
+	<script src="fetchChart.js"></script>
 </body>
 
 </html>
